--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <h3>Three Favorite Sites</h3>
 
-<p><a href="pinterest.com">Site1</a>
-<a href="netflix.com">Site2</a>
-<a href="adn.com">Site3</a></p>
+<p><a href="http://pinterest.com">Site1</a>
+<a href="http://netflix.com">Site2</a>
+<a href="http://adn.com">Site3</a></p>
 
 </body>
 
