--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 <p><a href="mailto:azarzoza@gmail.com">email</a></p>
 
+<h2>Three Favorite Foods</h2>
+
 <h3>Three Favorite Sites</h3>
 
 <p><a href="http://pinterest.com">Site1</a>
